syntax = "proto3";
package proto;
option go_package = "grpc/proto";

message GetRequest {
    string key = 1;
}

message GetResponse {
    int64 value = 1;
}

message PutRequest {
    uint32 add_server = 1;
    string key = 2;
    int64 value = 3;
}

message GetReportRequest {
    string deviceId = 1;
    string modelId = 2;
    string featureId = 3;
    string msgId = 4;
}

message GetIssueRequest {
    string deviceId = 1;
    string modelId = 2;
    string featureId = 3;
    string msgId = 4;
    map<string, string> values = 5;
}

message GetRevRequest {
    repeated string messages = 1;
}

message GetReportResponse {
    repeated string messages = 1;
}

message GetIssueResponse {
    repeated string issueMessages = 1;
    repeated string reportMessages = 2;
}

message GetRevResponse {
    string routingKey = 1;
    repeated string messages = 2;
}

message Empty {}

message SumRequest {
    int64 a = 1;
    int64 b = 2;
}

message SumResponse {
    int64 r = 1;
}

service Converter {
    rpc ConvertReportMessage(GetReportRequest) returns (GetReportResponse);
    rpc	ConvertIssueMessage(GetIssueRequest) returns (GetIssueResponse);
    rpc	RevConvertMessages(GetRevRequest) returns (GetRevResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (Empty);
}

service AddHelper {
    rpc Sum(SumRequest) returns (SumResponse);
}
